fix(storefront): BCTHEME-457 Update focus tooltip styles contrast to achieve accessibility AA Complaince (#2047)

--- a/assets/scss/common/_focus-tooltip.scss
+++ b/assets/scss/common/_focus-tooltip.scss
@@ -6,14 +6,14 @@
             top: 50%;
             border-width: remCalc(10px);
             border-style: solid;
-            border-color: transparent transparent $adminBar-tooltip-bg-backgroundColor transparent;
+            border-color: transparent transparent $focusTooltip-backgroundColor transparent;
         }
 
         &:after {
             content: attr($attr);
             padding: remCalc(4px) remCalc(6px);
-            background-color: $adminBar-tooltip-bg-backgroundColor;
-            color: white;
+            background-color: $focusTooltip-backgroundColor;
+            color: $focusTooltip-textColor;
             position: absolute;
             font-size: 1rem;
             white-space: nowrap;
